fix title letterspacing

--- a/components/main/main.module.css
+++ b/components/main/main.module.css
@@ -9,6 +9,20 @@
     margin: 0 22px;
 }
 
+.title {
+  font-size: 3.125vw;
+  font-weight: 700;
+  line-height: 4.931vw;
+  letter-spacing: normal;
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 30px;
+    line-height: 38px;
+  }
+}
+
 @media screen and (min-width: 768px) {
     .wrapper {
         font-size: 2.8vw;
@@ -20,7 +34,6 @@
     .container {
         font-size: 22px;
         line-height: 29px;
-        margin: 0 0 0 10px;
     }
     .wrapper {
         margin: 0 10px;
